k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jobmatcher
  labels:
    name: jobmatcher
    app: jobmatcher-platform
